Desenvolvimento das Views, da Controller e Repositorio de Usuario

--- a/TarefaSiteEF/Views/Home/Index.cshtml
+++ b/TarefaSiteEF/Views/Home/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>Olá, Seja bem vindo ao Gerenciador de Tarefas Elly!!</h1>
+</div>
+<div class="text-center" style="margin-top: 180px">
+    <img src="~/Imagens/LOGO_ELLY (2).png" />
+</div>
+<div class="col text-center" style="margin-top: 180px">
+    <a href="/Usuarios/Login" type="button" class="btn btn-outline-primary btn-lg"> Acesse sua conta </a>
+    <a href="/Usuarios/Nova" type="=button" class="btn btn-outline-secondary btn-lg"> Criar conta </a>
 </div>
