--- a/TarefaSiteEF/Views/Usuarios/Nova.cshtml
+++ b/TarefaSiteEF/Views/Usuarios/Nova.cshtml
@@ -40,7 +40,7 @@
         </div>
 
         <div>
-            <button class="btn btn-primary" type="submit">Entrar</button>
+            <button class="btn btn-primary" type="submit">Criar</button>
         </div>
     }
 </div>
