Desenvolvimento e testes das Views e da controller de Tarefas

--- a/TarefaSiteEF/Views/Shared/_Layout.cshtml
+++ b/TarefaSiteEF/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
             @if (Context.IsAuthenticated == true)
             {
                 <li class="col-lg-12" style="text-align: right">
-                    <a class="btn btn-outline-primary" href="/User/Logout">Sair</a>
+                    <a class="btn btn-outline-primary" href="/Usuarios/Logout">Sair</a>
                 </li>
             }
         </ul>
