--- a/TarefaSiteEF/Views/Usuarios/Login.cshtml
+++ b/TarefaSiteEF/Views/Usuarios/Login.cshtml
@@ -31,7 +31,7 @@
 
         <div>
             <button class="btn btn-primary" type="submit">Entrar</button>
-            @Html.ActionLink("Criar conta", "Nova", "User", null, new { @class = "btn btn-secondary"})
+            @Html.ActionLink("Criar conta", "Nova", "Usuarios", null, new { @class = "btn btn-secondary"})
         </div>
     }
 </div>
